Sua Entity va lam den cau 5

--- a/QuanLyChuyenBay/src/main/resources/application.properties
+++ b/QuanLyChuyenBay/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 
-spring.datasource.url= jdbc:mysql://localhost:3306/QuanLyChuyenBay?useSSL=false
+spring.datasource.url= jdbc:mysql://localhost:3306/QuanLyChuyenBay
 spring.datasource.username= root
 spring.datasource.password= Long@123
 
